[BUG #8402] TextArea in Internet Explorer ignores new line characters * removed whitespace:normal for textareas.

--- a/framework/source/resource/qx/mobile/scss/ui/_form.scss
+++ b/framework/source/resource/qx/mobile/scss/ui/_form.scss
@@ -14,6 +14,14 @@
 .form-row {
   list-style-type: none;
   padding: rem(5) rem(0) rem(5) rem(0);
+
+  label {
+    padding-right: rem(10);
+  }
+
+  * {
+    text-overflow: ellipsis;
+  }
 }
 
 .form-row.form-separation-row:last-child {
@@ -33,16 +41,6 @@
   margin-top: rem(10);
 }
 
-.form-row * {
-  white-space: normal;
-  text-overflow: ellipsis;
-}
-
-.form-row label {
-  padding-right: rem(10);
-}
-
-
 .text-area {
   @include background-clip(padding-box);
   @include background($input-background);
@@ -50,8 +48,8 @@
   border: rem(1) solid $input-border-color;
   resize: none;
   outline: none;
-  width:100%;
 
+  width:100%;
   height: rem(150);
   min-height: rem(150);
 
